--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,40 @@
-appdirs==1.4.4
-astroid==2.4.2
+aniso8601==9.0.1
+attrs==20.3.0
 bcrypt==3.2.0
-certifi==2020.11.8
-cffi==1.14.5
-chardet==3.0.4
+blinker==1.4
+cffi==1.14.4
 click==7.1.2
-distlib==0.3.1
+cryptography==3.4.7
 dnspython==2.0.0
 email-validator==1.1.2
-filelock==3.0.12
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
+Flask-Jsonpify==1.5.0
+Flask-JWT-Extended==4.1.0
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+flask-marshmallow==0.14.0
+Flask-Moment==0.10.0
+flask-restx==0.2.0
 Flask-SQLAlchemy==2.4.4
+Flask-User==1.0.2.2
 Flask-WTF==0.14.3
-gunicorn==20.1.0
+gunicorn==20.0.4
 idna==2.10
-isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
-lazy-object-proxy==1.4.3
+jsonschema==3.2.0
 MarkupSafe==1.1.1
-mccabe==0.6.1
+marshmallow==3.9.1
+marshmallow-sqlalchemy==0.24.1
+passlib==1.7.4
+Pillow==8.0.1
+psycopg2-binary==2.8.6
 pycparser==2.20
-pylint==2.6.0
-requests==2.25.0
+PyJWT==2.0.1
+pyrsistent==0.17.3
+pytz==2020.4
 six==1.15.0
 SQLAlchemy==1.3.20
-toml==0.10.2
-urllib3==1.26.2
-virtualenv==20.2.1
-Werkzeug==1.0.1
-wrapt==1.12.1
+Werkzeug==0.16.1
 WTForms==2.3.3
