--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dnspython==2.0.0
 email-validator==1.1.2
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
+Flask-Dropzone==2.0.0
 Flask-Jsonpify==1.5.0
 Flask-JWT-Extended==4.1.0
 Flask-Login==0.5.0
@@ -19,21 +20,27 @@ flask-restx==0.2.0
 Flask-SQLAlchemy==2.4.4
 Flask-User==1.0.2.2
 Flask-WTF==0.14.3
+greenlet==3.0.3
 gunicorn==20.0.4
 idna==2.10
+importlib-metadata==7.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
 MarkupSafe==1.1.1
 marshmallow==3.9.1
 marshmallow-sqlalchemy==0.24.1
+packaging==23.2
 passlib==1.7.4
 Pillow==8.0.1
+psycopg2-binary==2.9.9
 pycparser==2.20
 PyJWT==2.0.1
 pyrsistent==0.17.3
 pytz==2020.4
 six==1.15.0
 SQLAlchemy==1.3.20
+typing_extensions==4.10.0
 Werkzeug==0.16.1
 WTForms==2.3.3
+zipp==3.17.0
