--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ marshmallow==3.9.1
 marshmallow-sqlalchemy==0.24.1
 packaging==23.2
 passlib==1.7.4
-# Pillow==8.0.1
+Pillow==8.4.0
 psycopg2-binary==2.9.9
 pycparser==2.20
 PyJWT==2.0.1
