--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 aniso8601==9.0.1
 attrs==20.3.0
 bcrypt==3.2.0
@@ -15,6 +16,7 @@ Flask-JWT-Extended==4.1.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 flask-marshmallow==0.14.0
+Flask-Migrate==4.0.5
 Flask-Moment==0.10.0
 flask-restx==0.2.0
 Flask-SQLAlchemy==2.4.4
@@ -27,12 +29,13 @@ importlib-metadata==7.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
+Mako==1.3.2
 MarkupSafe==1.1.1
 marshmallow==3.9.1
 marshmallow-sqlalchemy==0.24.1
 packaging==23.2
 passlib==1.7.4
-# Pillow==8.4.0
+# Pillow==8.0.1
 psycopg2-binary==2.9.9
 pycparser==2.20
 PyJWT==2.0.1
