--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ numpy==1.26.4
 opt-einsum==3.3.0
 packaging==23.2
 passlib==1.7.4
-Pillow==8.0.1
+# Pillow==8.0.1
 protobuf==4.25.3
 psycopg2-binary==2.9.9
 pycparser==2.21
