--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,7 @@ ml-dtypes==0.3.2
 namex==0.0.7
 nltk==3.8.1
 numpy==1.26.4
+opencv-python==4.9.0.80
 opt-einsum==3.3.0
 packaging==23.2
 passlib==1.7.4
